--- a/OAuth2_qq/pom.xml
+++ b/OAuth2_qq/pom.xml
@@ -20,6 +20,12 @@
 
     <!-- pom.xml -->
     <dependencies>
+        <!-- Spring Security OAuth2 Client -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
         <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
